--- a/css/styles.css
+++ b/css/styles.css
@@ -44,131 +44,53 @@ a {
 }
 
 .container {
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #4d5ae5;
-  margin-right: 76px;
-}
-
-.logo-studio-color {
-  color: #2e2f42;
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
-  font-family: "Roboto", sans-serif;
-  border-bottom: 1px solid #e7e9fc;
-  display: flex;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
 }
 
 .header-container {
   display: flex;
   align-items: center;
-}
-
-.header-menu-list {
-  display: flex;
-  gap: 40px;
-}
-
-.header-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  padding: 24px 0;
-  display: block;
-  position: relative;
-}
-
-.studio-link {
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link.studio-link::after {
-  content: "";
-  border-radius: 2px;
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
-
-.contacts {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  font-style: normal;
-  margin-left: auto;
-  display: block;
-}
-
-.contacts-list {
-  display: flex;
+  padding: 16px 16px;
   margin: 0 auto;
-  gap: 40px;
+}
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link {
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.logo-span {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
 }
 
-.contacts-link:hover,
-.contacts-link:focus {
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-select-icon {
 }
 
-.contacts-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-list:hover,
-.contacts-list:focus {
-  color: #404bbf;
-  text-decoration: underline;
-}
-
-.header-link:hover,
-.header-link:focus {
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: #404bbf;
-}
-
-.hero {
+.hero-section {
   background-color: #2e2f42;
   display: flex;
   align-items: center;
-  max-width: 1440px;
+  height: 432px;
   margin: 0 auto;
-  padding: 188px 0;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -176,103 +98,99 @@ a {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/Dark-bg-mob.jpg);
+}
+
+.hero-container {
+  text-align: center;
+}
+
+.hero-image {
 }
 
 .hero-title {
-  display: block;
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  max-width: 496px;
+  max-width: 216px;
   margin: 0 auto;
 }
 
-.hero-btn {
+.hero-button {
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  margin-top: 72px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  background-color: #4d5ae5;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  display: block;
-  min-width: 169px;
-  height: 56px;
-  border: none;
-  border-radius: 4px;
-  margin: 48px auto 0 auto;
-  padding: 16px 32px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.features {
-  padding: 120px 0;
+.hero-button:hover,
+.hero-button:focus {
+  background: #404bbf;
 }
 
-.features-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  padding: 24px 100px;
-  margin-bottom: 8px;
-  background-color: #f4f4fd;
-  transition-property: background-color;
-  height: 112px;
+.featuer-section {
+}
+
+.features-container {
+  padding: 96px 16px;
 }
 
 .features-list {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 24px;
 }
 
-.features-item {
-  width: calc((100% - 72px) / 4);
-  gap: 24px;
+.features-item:not(:last-child) {
+  margin-bottom: 72px;
 }
 
-.features-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+.features-title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #2e2f42;
   margin-bottom: 8px;
 }
 
 .features-text {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.team {
-  background-color: #f4f4fd;
-  padding: 120px 0;
+.team-container {
+  background: #f4f4fd;
+  padding: 96px 28px;
+  text-align: center;
 }
 
 .team-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.11111;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  text-transform: capitalize;
   margin-bottom: 72px;
 }
 
 .team-list {
-  display: flex;
-  gap: 24px;
 }
 
 .team-item {
@@ -280,51 +198,42 @@ a {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   border-radius: 0 0 4px 4px;
-  width: calc((100% - 72px) / 4);
 }
 
-.item-container {
+.team-item:not(:last-child) {
+  margin-bottom: 72px;
+}
+
+.team-item-container {
   padding: 32px 0;
-  gap: 32px;
-}
-
-.team-img {
-  margin: 0 auto;
 }
 
 .team-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
   margin-bottom: 8px;
 }
 
-.team-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #434455;
+.team-icons {
 }
 
-.team-icons-list {
+.team-social-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
   gap: 24px;
+  align-items: center;
+  flex-direction: row;
+  padding: 0 16px;
   margin-top: 8px;
-}
-
-.team-icon-item {
-  width: 40px;
   height: 40px;
 }
 
-.team-part-a {
+.social-icons-item {
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.social-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -336,78 +245,29 @@ a {
   height: 100%;
 }
 
-.team-icon-image {
-  fill: #f4f4fd;
+.social-icons {
+  fill: #fff;
 }
 
-.team-part-a:hover,
-.team-part-a:focus {
-  background-color: #404bbf;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+.portfolio-container {
+  margin: 96px 0;
 }
 
 .portfolio-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.11111;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  text-transform: capitalize;
   margin-bottom: 72px;
 }
 
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-  justify-content: center;
-}
-.portfolio-item:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(0%);
-}
-
-.portfolio-item-container {
-  padding: 32px 16px;
-}
-
-.portfolio-img {
-}
-
-.portfolio-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-.portfolio-subtitle-container {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-
-.portfolio-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+.portfolio-item:not(:last-child) {
+  margin-bottom: 48px;
 }
 
 .portfolio-overlay {
@@ -415,11 +275,11 @@ a {
   position: relative;
 }
 
-.portfolio-item:hover .portfolio-cover-text {
-  transform: translateY(0);
+.portfolio-overlay:hover .float-text {
+  transform: translate(0);
 }
 
-.portfolio-cover-text {
+.float-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -434,92 +294,28 @@ a {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Modal window */
-
-.modal-overlay {
-  position: fixed;
-  max-width: 100%;
-  max-height: 100%;
+.portfolio-subtitle-container {
+  padding: 32px 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
 }
 
-.footer {
-  background-color: #2e2f42;
-  display: flex;
-  align-items: baseline;
-  padding: 100px 0;
-  margin: 0 auto;
+.portfolio-subtitle {
+  margin-bottom: 8px;
+}
+
+.portfolio-text {
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
+  background: #2e2f42;
+  height: 664px;
 }
 
-.logo-container {
-  display: flex;
-  flex-direction: column;
-  margin-right: 120px;
-}
-
-.footer-text {
-  display: block;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  max-width: 264px;
-}
-
-.footer-container-social {
-}
-
-.footer-icons-list {
-  display: flex;
-  gap: 16px;
-}
-
-.footer-icon-item {
-  width: 40px;
-  height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-icon {
-  fill: #f4f4fd;
-}
-
-.footer-links-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
-}
-.footer-container-social {
-  margin-right: 80px;
-}
-
-.footer-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-link:hover,
-.footer-link:focus {
-  background-color: #31d0aa;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-logo-studio-color {
-  color: #f4f4fd;
+.footer-logo-container {
+  padding-top: 96px;
+  padding-bottom: 8px;
 }
 
 .footer-logo {
@@ -530,31 +326,84 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  display: inline-block;
-  margin-bottom: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0 86px;
+  margin-top: 96px;
 }
 
-.subscribe-form {
-  display: flex;
-  gap: 24px;
+.footer-logo-span {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
 }
 
-.footer-label {
+.footer-text {
+  max-width: 288px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  margin-bottom: 72px;
 }
 
-.form-text {
-  display: flex;
+.footer-social-container {
+}
+
+.social-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  flex-direction: column;
-  margin-left: 80px;
+  text-align: center;
+  margin-bottom: 16px;
 }
 
-.subscribe-container {
+.footer-icons-list {
   display: flex;
+  gap: 16px;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0 40px;
+  margin-top: 8px;
+  height: 40px;
+}
+
+.footer-icons-item {
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  background-color: #31d0aa;
+}
+
+.subscribe-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .subscribe-text {
@@ -563,268 +412,41 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  position: relative;
-  margin-bottom: 16px;
+  text-align: center;
+  margin-top: 72px;
+}
+
+.subscribe-label {
+}
+
+.subscribe-input-text {
+  margin-top: 16px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 288px;
+  height: 40px;
+  padding-left: 16px;
 }
 
 .subscribe-button {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  margin-top: 16px;
   border-radius: 4px;
-  min-width: 165px;
+  width: 165px;
   height: 40px;
-  background-color: #4d5ae5;
+  background: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: #fff;
   cursor: pointer;
-  border: none;
-}
-
-.placeholder-text {
-  border: 1px solid #ffffff;
-  border-radius: 4px;
-  width: 264px;
-  height: 40px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  padding-left: 16px;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  background-color: transparent;
-}
-
-.placeholder-text::placeholder {
-  color: #ffffff;
 }
 
 .subscribe-icon {
   fill: #fff;
   margin-left: 16px;
-
-  right: 0;
-}
-
-.backdrop {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 0; */
-  /* pointer-events: none; */
-}
-
-.backdrop.is-open {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.modal {
-  width: 408px;
-  min-height: 584px;
-  background: #fcfcfc;
-  border-radius: 4px;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-    0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translate(-50%, -50%);
-  padding: 72px 24px 24px 24px;
-}
-
-.modal-close {
-  display: flex;
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  right: 24px;
-  top: 24px;
-  border-radius: 50%;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close:hover,
-.modal-close:focus {
-  background-color: #404bbf;
-  border: none;
-  fill: #fff;
-}
-
-.close-icon {
-  margin: auto;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form {
-}
-
-.modal-field {
-  margin-bottom: 8px;
-}
-
-.modal-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 16px;
-}
-
-.field-name {
-  display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-bottom: 4px;
-}
-
-.modal-field-wrap {
-  position: relative;
-}
-
-.field-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  padding-left: 38px;
-  background-color: transparent;
-  outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.field-input:focus {
-  border-color: #4d5ae5;
-  fill: #4d5ae5;
-}
-
-.field-input:focus + .modal-icon {
-  border-color: #4d5ae5;
-  fill: #4d5ae5;
-}
-
-.field-input-text-area {
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  width: 100%;
-  height: 120px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
-  background-color: transparent;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 8px 16px;
-  outline: transparent;
-}
-
-.field-input-text-area:focus {
-  border-color: #4d5ae5;
-}
-
-.modal-icon {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: absolute;
-  left: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.modal-icon:focus {
-  fill: #4d5ae5;
-}
-
-.modal-field-comment {
-  margin-bottom: 16px;
-}
-
-.field-input-text-area::placeholder {
-  font-size: 12px;
-  line-height: 1.16667;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
-}
-
-.modal-field-checkbox {
-  margin-bottom: 24px;
-}
-
-.click:checked {
-  fill: #4d5ae5;
-}
-
-.checkbox-click:checked + .privacy-policy-text span {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-}
-
-.privacy-policy-text {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-}
-
-.pcivacy-policy-span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox-text {
-  line-height: 1.33333;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: #4d5ae5;
-}
-
-.form-button {
-  display: block;
-  margin: 0 auto;
-  min-width: 169px;
-  height: 56px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  text-align: center;
-  color: #fff;
-  cursor: pointer;
-  background-color: #4d5ae5;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
