--- a/css/styles.css
+++ b/css/styles.css
@@ -104,21 +104,30 @@ a {
 }
 
 .menu {
-  width: 320px;
-  height: 640px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 24px 24px 40px 16px;
   background-color: #fff;
-  /* visibility: hidden; */
-  /* opacity: 0; */
-  /* pointer-events: none; */
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
 }
 
 .menu-close-button {
   display: block;
-  width: 8px;
-  height: 8px;
   margin-left: auto;
+  margin-bottom: 24px;
   border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid #e7e9fc;
+  fill: #2e2f42;
 }
 
 .menu-close-icon {
@@ -130,9 +139,7 @@ a {
 .menu-links-list {
   display: flex;
   flex-direction: column;
-  gap: 40px;
   margin-bottom: auto;
-  padding-left: 16px;
 }
 
 .menu-links-item {
@@ -141,13 +148,23 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 40px;
+}
+
+.menu-contacts-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-contacts-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 24px;
-  padding-left: 16px;
+  margin-top: auto;
   margin-bottom: 48px;
 }
 
@@ -158,11 +175,10 @@ a {
 
 .menu-icons-list {
   display: flex;
-  gap: 40px;
+  align-items: center;
   justify-content: center;
-  padding-left: 16px;
-  padding-right: 24px;
-  margin-bottom: 40px;
+  flex-direction: row;
+  gap: 40px;
 }
 
 .menu-icons-item {
@@ -170,11 +186,14 @@ a {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  color: #f4f4fd;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 40px;
   height: 40px;
+}
+
+.menu-social-icons {
+  fill: #f4f4fd;
 }
 
 .hero {
